Fixed menu z-index bug

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -133,5 +133,10 @@ a {
   width: 100vw;
 }
 
+.main-wrapper {
+  position: relative;
+  z-index: 0;
+}
+
 @import './typography.css';
 @import './containers.css';
